# aetolia

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: FUNDING.yml
.github/workflows/: build.yaml  coverage.yml
examples/: load_sample.rs  validate_file.rs
scripts/: coverage.ps1  coverage.sh
src/: common.rs  convert.rs  error.rs  lib.rs  model.rs  ops.rs  parser.rs  serialize.rs  test_utils.rs  validate.rs
src/convert/: component.rs  object.rs  param.rs  property.rs
src/convert/property/: recur.rs
src/model/: access.rs  component.rs  object.rs  param.rs  property.rs
src/model/component/: alarm.rs  daylight.rs  event.rs  free_busy.rs  iana_component.rs  journal.rs  standard.rs  time_zone.rs  todo.rs  x_component.rs
src/model/property/: duration.rs  recur.rs
src/parser/: component.rs  first_pass.rs  language_tag.rs  object.rs  param.rs  pre.rs  property.rs  types.rs
src/parser/component/: alarm.rs  event.rs  free_busy.rs  journal.rs  timezone.rs  todo.rs
src/parser/object/: types.rs
src/parser/param/: types.rs  value.rs  values.rs
src/parser/property/: component.rs  recur.rs  types.rs  uri.rs  value.rs  value_types.rs
src/parser/types/: calendar_property.rs  component.rs  component_property.rs  object.rs  param.rs  recur.rs  uri.rs
src/serialize/: component.rs  object.rs  param.rs  property.rs  value.rs
src/validate/: calendar_properties.rs  component_properties.rs  error.rs  params.rs  recur.rs  value.rs
tests/: common.rs  round_trip.rs  tests.rs
