[package]
name = "aetolia"
version = "0.1.0"
edition = "2021"
description = "Parsing, creation, validation and serialisation of iCalendar data"
license = "MPL-2.0"
repository = "https://github.com/EphyraSoftware/aetolia"

[dependencies]
nom = "7.1"
base64 = "0.22"
hex = "0.4"
lazy_static = "1.4"
anyhow = "1"

# builder
time = "0.3"

[dev-dependencies]
test-case = "3.3.1"
similar-asserts = "1.5"
chrono = "0.4"
